--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     color: orange;
 }
 
-.main_content{
+.header_content{
     text-align: center;
 }
 
@@ -31,4 +31,10 @@
     right: 20%;
     margin-right: -3px;
     top: 0;
+  }
+
+  .main_body{
+    margin-left:22%;
+    margin-right:22%;
+
   }
