mostly done with the homepage

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,12 @@
     margin-right:22%;
 
   }
+
+  .profile_image{
+    width: 40%;
+    height:auto;
+  }
+
+  .margin{
+    margin-left: 10%;
+  }
