--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
     left: 20%;
     margin-left: -3px;
     top: 0;
+    pointer-events: none;
   }
 
   .vl {
@@ -42,8 +43,10 @@
   .profile_image{
     width: 40%;
     height:auto;
+    margin:2%;
   }
 
   .margin{
     margin-left: 10%;
+    position: relative;
   }
