--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@
 .header_content{
     text-align: center;
 }
+@media (max-width: 768px) {
+  .vl{
+    border-left:0px ;
+  }
+}
 
 .vl {
     border-left: 1px dashed grey;
