--- a/styles.css
+++ b/styles.css
@@ -14,11 +14,7 @@
 .header_content{
     text-align: center;
 }
-@media (max-width: 768px) {
-  .vl{
-    border-left:0px ;
-  }
-}
+
 
 .vl {
     border-left: 1px dashed grey;
@@ -39,6 +35,7 @@
     top: 0;
   }
 
+
   .main_body{
     margin-left:22%;
     margin-right:22%;
@@ -46,6 +43,7 @@
 
 
   }
+
 
   .profile_image{
     width: 40%;
@@ -67,4 +65,22 @@
     padding: 2%;
     background-image: linear-gradient(to bottom, white,whitesmoke );
     border-radius: 15px;
+  }
+
+  @media (max-width: 768px) {
+    .vl{
+      border-left:0px ;
+    }
+    .vl{
+      border-right:0px ;
+    }
+    .main_body{
+      margin-left: 10%;
+      margin-right: 10%;
+
+    }
+    .footer{
+      margin-left: 30%;
+      margin-right: 30%;
+    }
   }
