--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,16 @@
       margin-right: 30%;
     }
   }
+  .social-links {
+    margin-top: 20px;
+    font-size: 24px;
+}
+.social-links a {
+    text-decoration: none;
+    margin-right: 15px;
+    color: inherit;
+}
+.social-links a:hover {
+    opacity: 0.7;
+    color: inherit;
+}
